--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.14.0'"
+       "'2.0.0'"
       ]
      },
      "execution_count": 3,
@@ -18,6 +18,7 @@
    ],
    "source": [
     "import tensorflow as tf\n",
+    "import numpy as np\n",
     "tf.__version__"
    ]
   },
@@ -29,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const:0' shape=() dtype=int32>"
+       "<tf.Tensor: id=0, shape=(), dtype=int32, numpy=6>"
       ]
      },
      "execution_count": 4,
@@ -49,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const_1:0' shape=() dtype=float32>"
+       "<tf.Tensor: id=1, shape=(), dtype=float32, numpy=6.0>"
       ]
      },
      "execution_count": 5,
@@ -69,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const_2:0' shape=(2,) dtype=bool>"
+       "<tf.Tensor: id=2, shape=(2,), dtype=bool, numpy=array([ True, False])>"
       ]
      },
      "execution_count": 6,
@@ -89,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const_3:0' shape=() dtype=string>"
+       "<tf.Tensor: id=3, shape=(), dtype=string, numpy=b'I love TF'>"
       ]
      },
      "execution_count": 7,
@@ -99,6 +100,242 @@
    ],
    "source": [
     "tf.constant('I love TF')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([1 2 3], shape=(3,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([1,2,3])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "tf.Tensor([1 2 3], shape=(3,), dtype=int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = tf.convert_to_tensor(a)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = tf.ones(6)\n",
+    "b = tf.Variable(a, name='Data_point')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tf.float32"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check tf.Variable\n",
+    "b.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data_point:0'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.trainable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=76, shape=(6, 6), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example of create zero\n",
+    "a = tf.zeros([6,6])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=77, shape=(6, 6), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = tf.zeros_like(a)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=80, shape=(6, 6), dtype=int32, numpy=\n",
+       "array([[0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = tf.fill([6,6], 0)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=92, shape=(6, 6), dtype=float32, numpy=\n",
+       "array([[-0.01813317,  0.59496486, -0.10287994, -0.03476705, -1.012172  ,\n",
+       "         0.15744112],\n",
+       "       [-0.9477086 , -0.3335474 , -0.97094774,  0.49443418, -0.09851271,\n",
+       "        -0.5408863 ],\n",
+       "       [-0.9768823 , -1.1362982 ,  0.36085612,  1.487743  ,  0.09747643,\n",
+       "        -2.1391566 ],\n",
+       "       [ 1.718244  ,  1.8086684 ,  0.21853128, -1.5289762 ,  0.21162604,\n",
+       "        -0.6782936 ],\n",
+       "       [ 1.18307   ,  0.17094716,  1.4607472 , -1.8871611 , -0.7606457 ,\n",
+       "         0.03821288],\n",
+       "       [-0.3770435 ,  0.369909  , -0.70073086, -0.33597702, -1.1452011 ,\n",
+       "         1.0820594 ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example random by normal distribution\n",
+    "a = tf.random.normal([6,6], mean = 0, stddev = 1)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random by truncated normal distribution\n",
+    "b = tf.random.truncated_normal([6,6], mean = 0, )"
    ]
   }
  ],
