Selected row data

--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'2.0.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<tf.Tensor: id=0, shape=(), dtype=int32, numpy=6>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "<tf.Tensor: id=1, shape=(), dtype=float32, numpy=6.0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "<tf.Tensor: id=2, shape=(2,), dtype=bool, numpy=array([ True, False])>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "<tf.Tensor: id=3, shape=(), dtype=string, numpy=b'I love TF'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "tf.float32"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "'Data_point:0'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=76, shape=(6, 6), dtype=float32, numpy=\n",
+       "<tf.Tensor: id=18, shape=(6, 6), dtype=float32, numpy=\n",
        "array([[0., 0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0.],\n",
@@ -229,7 +229,7 @@
        "       [0., 0., 0., 0., 0., 0.]], dtype=float32)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=77, shape=(6, 6), dtype=float32, numpy=\n",
+       "<tf.Tensor: id=19, shape=(6, 6), dtype=float32, numpy=\n",
        "array([[0., 0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0.],\n",
@@ -257,7 +257,7 @@
        "       [0., 0., 0., 0., 0., 0.]], dtype=float32)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=80, shape=(6, 6), dtype=int32, numpy=\n",
+       "<tf.Tensor: id=22, shape=(6, 6), dtype=int32, numpy=\n",
        "array([[0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0],\n",
@@ -284,7 +284,7 @@
        "       [0, 0, 0, 0, 0, 0]], dtype=int32)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,28 +296,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=92, shape=(6, 6), dtype=float32, numpy=\n",
-       "array([[-0.01813317,  0.59496486, -0.10287994, -0.03476705, -1.012172  ,\n",
-       "         0.15744112],\n",
-       "       [-0.9477086 , -0.3335474 , -0.97094774,  0.49443418, -0.09851271,\n",
-       "        -0.5408863 ],\n",
-       "       [-0.9768823 , -1.1362982 ,  0.36085612,  1.487743  ,  0.09747643,\n",
-       "        -2.1391566 ],\n",
-       "       [ 1.718244  ,  1.8086684 ,  0.21853128, -1.5289762 ,  0.21162604,\n",
-       "        -0.6782936 ],\n",
-       "       [ 1.18307   ,  0.17094716,  1.4607472 , -1.8871611 , -0.7606457 ,\n",
-       "         0.03821288],\n",
-       "       [-0.3770435 ,  0.369909  , -0.70073086, -0.33597702, -1.1452011 ,\n",
-       "         1.0820594 ]], dtype=float32)>"
+       "<tf.Tensor: id=28, shape=(6, 6), dtype=float32, numpy=\n",
+       "array([[ 0.23475045,  0.19531126, -0.8858946 ,  0.0140976 ,  1.7329364 ,\n",
+       "        -1.0714662 ],\n",
+       "       [-0.3086168 ,  0.646163  ,  2.1453652 ,  1.0891203 ,  0.81902164,\n",
+       "        -0.60064346],\n",
+       "       [-1.3030853 , -0.25428003, -0.6399623 , -0.25463837, -0.18158324,\n",
+       "        -0.7568225 ],\n",
+       "       [ 0.80979234, -1.080822  , -0.50929105,  1.2413712 ,  1.7243938 ,\n",
+       "        -0.6058285 ],\n",
+       "       [-0.5082742 ,  0.08469547, -0.29255038, -0.07362638, -1.9127594 ,\n",
+       "        -0.01593612],\n",
+       "       [-0.23517732, -2.525139  ,  0.32221758,  1.4899458 ,  0.4421446 ,\n",
+       "        -1.2337537 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,13 +330,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: id=40, shape=(6, 6), dtype=float32, numpy=\n",
+       "array([[ 0.65965223, -0.24354482,  1.0908871 ,  0.2218329 , -0.20379417,\n",
+       "         0.3702346 ],\n",
+       "       [-0.9064443 ,  0.8928901 ,  1.4626251 ,  0.1675419 , -1.1436559 ,\n",
+       "        -0.6087246 ],\n",
+       "       [ 1.1697145 ,  1.6262107 , -0.19048119, -0.27591667,  1.8814676 ,\n",
+       "         0.14600946],\n",
+       "       [ 1.3420037 ,  0.244721  ,  0.8104963 ,  0.36584204,  0.73588574,\n",
+       "         0.32315874],\n",
+       "       [-0.40275487,  1.4657907 , -1.3698874 , -1.0222567 ,  0.6391265 ,\n",
+       "         0.2925666 ],\n",
+       "       [-0.02646762,  1.0354882 , -1.2407523 ,  0.386618  ,  0.881666  ,\n",
+       "        -0.7553224 ]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# random by truncated normal distribution\n",
+    "b = tf.random.truncated_normal([6,6], mean = 0, )\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# random by truncated normal distribution\n",
-    "b = tf.random.truncated_normal([6,6], mean = 0, )"
+    "# Exmaple for select instance\n",
+    "a = tf.ones([1,5,5,3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([5, 3])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1, 5, 5])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[...,2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([5, 5, 3])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.gather_nd(a, [0]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
